[package]
name = "croner-rust-demo-webui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "croner-rust-demo"
path = "src/main.rs"

[dependencies]
croner = { path = "../croner-rust" }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" }
tower-http = { version = "0.4", features = ["fs"] }