[package]
name = "croner-rust-demo-webui"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "croner-rust-demo"
path = "src/main.rs"

[dependencies]
croner = { version = "3.0" }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" }
tower-http = { version = "0.4", features = ["fs"] }